[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
'''
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.coverage.run]
source = ['datetimerange']
branch = true

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    'except ImportError',
    'raise NotImplementedError',
    'pass',
    'ABCmeta',
    'abstractmethod',
    'abstractproperty',
    'abstractclassmethod',
    'warnings.warn',
]

[tool.isort]
known_third_party = [
    'pytest',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.mypy]
ignore_missing_imports = true
python_version = 3.7

pretty = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
    "test",
]

md_report = true
md_report_verbose = 1
md_report_color = "auto"
md_report_margin = 0
